--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "debug": "~2.6.9",
         "ejs": "^3.1.6",
         "express": "~4.16.1",
+        "express-flash": "^0.0.2",
+        "express-session": "^1.17.2",
         "http-errors": "~1.6.3",
         "lorem-ipsum": "^2.0.3",
         "md5": "^2.2.1",
