--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "mongoose": "^6.2.7",
         "morgan": "~1.9.1",
         "passport": "^0.5.2",
+        "passport-local": "^1.0.0",
         "pug": "^3.0.2",
         "uglify-js": "^2.6.0"
     }
