--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "test": "mocha",
+        "test": "mocha --exit",
         "start": "node ./bin/www"
     },
     "dependencies": {
