--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ cache:
     - node_modules/
 
 test_async:
+  before_script: 
+    - chmod 0777 ./node_modules/.bin/mocha
   script:
     - echo "starting async testing..."
     - npm install
