--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "~4.16.1",
         "express-flash": "^0.0.2",
         "express-session": "^1.17.2",
+        "fill-range": "^7.0.1",
         "http-errors": "~1.6.3",
         "jsdom": "^19.0.0",
         "jsonwebtoken": "^8.5.1",
