added csv parser packages

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "clean-css": "^4.1.11",
         "constantinople": "^3.1.1",
         "cookie-parser": "~1.4.4",
+        "csv-parser": "^3.0.0",
         "debug": "~2.6.9",
         "ejs": "^3.1.6",
         "express": "~4.16.1",
         "express-flash": "^0.0.2",
         "express-session": "^1.17.2",
         "fill-range": "^7.0.1",
+        "fs": "^0.0.1-security",
         "http-errors": "~1.6.3",
         "jquery-csv": "^1.0.21",
         "jsdom": "^19.0.0",
