--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cookie-parser": "~1.4.4",
         "csv-parser": "^3.0.0",
         "debug": "~2.6.9",
+        "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
         "express": "~4.16.1",
         "express-flash": "^0.0.2",
