--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "accepts": "^1.3.8",
         "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "chokidar": "^3.5.3",
         "clean-css": "^4.1.11",
         "constantinople": "^3.1.1",
