--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "clean-css": "^4.1.11",
         "constantinople": "^3.1.1",
         "cookie-parser": "~1.4.4",
+        "cookie-session": "^2.0.0",
         "csv-parser": "^3.0.0",
         "debug": "~2.6.9",
         "dotenv": "^16.0.0",
